fix padding on smaller screens (less than 360px)
The padding of trends in small viewports is too much. I attempt fixing it by applying 10px padding on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,11 @@ body::-webkit-scrollbar-thumb {
     background: #fff
 }
 
+@media only screen and (max-width: 360px) {
+    .trends { 
+        padding: 10px;
+    }
+}
 .title {
     font-family: 'Raleway', sans-serif;
     margin-bottom: 25px;
